# retellclient

./: README.md  pyproject.toml
configs/: aetna_supdspc_mapd.yml
scripts/: filter_contacts_by_timezone.py  get_calls.py  validate_phone_numbers.py
utils/: config.py  fields.py  utils.py
